# aap-status

./: Cargo.toml  README.md  aap_status-59f0983d2e773cca.js  aap_status-59f0983d2e773cca_bg.wasm  check.sh  index.html
.cargo/: config.toml
.github/workflows/: checks.yml  pages.yml
crates/http/: Cargo.toml
crates/http/src/: github.rs
crates/model/: Cargo.toml
crates/model/src/: deployment.rs  environment.rs  lib.rs  pull_request.rs  repository.rs  team.rs  workflow.rs
crates/ui/: Cargo.toml
crates/ui/src/: app.rs  lib.rs  panel.rs  panel_deployment.rs  panel_pull_request.rs  panel_repository.rs  panel_workflows.rs
src/: app.rs  lib.rs  main.rs
src/github/: github_client.rs  github_models.rs  mod.rs  pulls.rs  repositories.rs  runs.rs  teams.rs  workflows.rs
src/ui/: deployments.rs  mod.rs  panels.rs  pull_requests.rs  repositories.rs  table.rs  workflows.rs
