[package]
name = "aap_status"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
members = ["crates/*"]

[workspace.dependencies]
http = { path = "crates/http" }
model = { path = "crates/model" }
ui = { path = "crates/ui" }

serde = { version = "1.0.152", features = ["derive"] }
#futures = "0.3.25"
serde_json = "1.0.91"
ehttp = "0.2.0"
itertools = "0.10.5"
egui = "0.21.0"
egui_extras = "0.21.0"
eframe = { version = "0.21.3", default-features = false, features = [
    "accesskit", # Make egui comptaible with screen readers. NOTE: adds a lot of dependencies.
    "default_fonts", # Embed the default egui fonts.
    "glow", # Use the glow rendering backend. Alternative: "wgpu".
    "persistence", # Enable restoring app state when restarting the app.
] }

# native:
tracing-subscriber = "0.3.16"

# web:
console_error_panic_hook = "0.1.7"
tracing-wasm = "0.2.1"
wasm-bindgen-futures = "0.4.33"
wasm-bindgen = "0.2.84"

[dependencies]
ui.workspace = true

serde.workspace = true
#futures.workspace = true
serde_json.workspace = true
ehttp.workspace = true
egui.workspace = true
egui_extras.workspace = true
eframe.workspace = true
itertools.workspace = true

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tracing-subscriber.workspace = true

[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook.workspace = true
tracing-wasm.workspace = true
wasm-bindgen-futures.workspace = true
wasm-bindgen.workspace = true

[profile.release]
opt-level = 2 # fast and small wasm

# Optimize all dependencies even in debug builds:
[profile.dev.package."*"]
opt-level = 2
