[package]
name = "aap_status"
version = "0.1.0"
edition = "2021"

[workspace]
members = ["crates/*"]

[workspace.dependencies]
http = { path = "crates/http" }
model = { path = "crates/model" }
ui = { path = "crates/ui" }

serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.91"
ehttp = "0.2.0"
itertools = "0.10.5"
egui = "0.21.0"
egui_extras = "0.21.0"
eframe = { version = "0.21.3", default-features = false, features = ["accesskit", "default_fonts", "glow", "persistence"] }
tracing-subscriber = "0.3.16"
console_error_panic_hook = "0.1.7"
tracing-wasm = "0.2.1"
wasm-bindgen-futures = "0.4.33"
wasm-bindgen = "0.2.84"

[dependencies]
ui.workspace = true
eframe.workspace = true

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tracing-subscriber.workspace = true

[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook.workspace = true
tracing-wasm.workspace = true
wasm-bindgen-futures.workspace = true
wasm-bindgen.workspace = true

[profile.release]
opt-level = 3

[profile.dev]
opt-level = 0
